# hydramem

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TECHNICAL_OVERVIEW.md  config.yml.example  docker-compose.yml  mkdocs.yml  noxfile.py  opencode.json  pyproject.toml
.agent/: README.md  current.example.md  log-template.md  tasks.example.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
agents/: IMPLEMENTATION.md  MEMORY.md
docs/: GLOSSARY.md  architecture-ir-km.md  architecture.md  benchmarks.md  cli-reference.md  configuration.md  getting-started.md  guia-uso-completa.md  index.md  mcp-tools-reference.md  multi-tenant.md  night-gardener.md  opencode-setup.md  roadmap.md  telemetry.md  verification.md
docs/integrations/: antigravity.md  claude-code-retention.md  claude-code.md  copilot-skills.md  copilot.md  cursor.md  gemini-cli.md  index.md  openclaw.md  remote-server.md
docs/internal/: CODEMAP.md  CONSTRAINTS.md  DEFINITION_OF_DONE.md  REVIEW.md  benchmark-results.md  contributing.md
docs/javascripts/: extra.js
examples/: docker-dogfood.md
hydramem/: cli.py  dashboard.py  gnn_prune.py  planner.py  ppr.py  search.py  server.py
hydramem/core/: __init__.py  config.py  logging.py  tokens.py  types.py
hydramem/garden/: __init__.py  crdt.py  gardener.py  inferrer.py  prune_trainer.py  pruner.py  repository.py  review.py  spectral.py
hydramem/ingest/: __init__.py  async_worker.py  chunker.py  embedder.py  extractor.py  pipeline.py  registry.py
hydramem/llm/: __init__.py  anthropic.py  base.py  factory.py  mistral.py  ollama.py  openai.py
hydramem/storage/: __init__.py  base.py  factory.py  federation.py
hydramem/telemetry/: __init__.py  aggregate.py  shadow.py  storage.py
hydramem/verification/: __init__.py  base.py  calibration.py  conflict.py  pipeline.py  srmkg.py  vog.py
media/: 00-TASKS.md  01-RESEARCH-outreach.md
media/actionables/: A0-repo-ready.md  A1-assets.md  A2-soft-launch.md  A3-hacker-news.md  A4-reddit.md  A5-producthunt.md  A6-social-cadence.md  A7-cold-outreach.md  A8-directories.md  A9-metrics-and-pitfalls.md
media/posts/: 01-hackernews-show-hn.md  02-reddit-localllama.md  03-reddit-mcp.md  04-reddit-selfhosted.md  05-reddit-chatgptcoding.md  06-reddit-machinelearning.md  07-twitter-launch-thread.md  08-twitter-buildinpublic-honesty.md  09-twitter-benchmark.md  10-twitter-reply-marketing.md  11-twitter-vs-mem0-zep.md  15-producthunt.md  (+8 more)
scripts/: benchmark.py  dogfood.py  init.sh  longmemeval_local.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_async_ingest.py  test_benchmark.py  test_calibration.py  test_cli.py  test_crdt.py  test_dashboard.py  test_db.py  test_federation.py  test_garden_repository.py  test_gardener.py  test_ingest.py  test_ingest_prechunked.py  test_ppr.py  test_provenance_and_graph.py  test_prune_review.py  test_public_api.py  test_registry.py  test_search.py  test_server.py  test_spectral.py  test_telemetry.py  test_temporal.py  test_verify.py
(+77 files in other folders)
