[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydramem"
version = "0.2.0"
description = "Local KMS with autonomous learning, hybrid graph-vector search, and MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP server (FastMCP 2.x API — supports streamable-http transport)
    "fastmcp>=2.14,<3.0",
    # Persistent graph backend: Grafeo (Rust core via PyO3, ~5 MB wheel).
    # Marker because Grafeo wheels target Python ≥ 3.12; on 3.11 we
    # fall back to NetworkX persistent pickle at runtime.
    "grafeo>=0.5,<1.0 ; python_version >= '3.12'",
    # Persistent vector store (chunks + embeddings)
    "lancedb>=0.15.0,<0.16.0",
    # Local LLM client (Ollama)
    "ollama>=0.4.0",
    # Default lightweight embedder — ONNX, ~80 MB, no torch.
    "fastembed>=0.3.0",
    "pyyaml>=6.0",
    # Pure-Python graph fallback (also used by traversal helpers).
    "networkx>=3.3",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyarrow>=18.0",
    "tiktoken>=0.7.0",
    "requests>=2.32",
]

[project.optional-dependencies]
# DEPRECATED (unmaintained upstream; removal planned) — legacy persistent graph
# backend. Prefer the default Grafeo (3.12+) / NetworkX backends.
kuzu = [
    "kuzu>=0.6,<1.0",
]
# Heavyweight embedding backend (full sentence-transformers + torch ~2 GB).
# Only needed for non-ONNX models or local fine-tuning.
sentence-transformers = [
    "sentence-transformers>=3.0.0,<4.0.0",
]
# Optional GNN backend for spurious-edge pruning. Skip on small machines.
gnn = [
    "torch>=2.2",
    "torch-geometric>=2.5",
]
# Zero-shot multilingual NER backend (GLiNER). ~200 MB incl. onnxruntime.
gliner = [
    "gliner>=0.2.5",
    "onnxruntime>=1.17",
]
# Documentation site (MkDocs Material) — build with `mkdocs serve` / `mkdocs build`.
docs = [
    "mkdocs-material>=9.5,<10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "nox>=2024.4.15",
]

[project.urls]
Homepage = "https://github.com/hydramem/hydramem"
Repository = "https://github.com/hydramem/hydramem"
Documentation = "https://github.com/hydramem/hydramem/tree/main/docs"
Issues = "https://github.com/hydramem/hydramem/issues"

[project.scripts]
hydramem-server = "hydramem.server:main"
hydramem = "hydramem.cli:main"
hydramem-dashboard = "hydramem.dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["hydramem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["hydramem"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by ruff format / manual review
